--- a/index.html
+++ b/index.html
@@ -1003,12 +1003,12 @@ footer {
   <!-- Banner Principal -->
   <section class="hero">
     <div class="container hero-content">
-      <h2>Descubre el fascinante mundo de la Fisica <span class="typed-text" id="typed-element"></span></h2>
+      <h2>Descubre el fascinante mundo de la Fisica<span class="typed-text" id="typed-element"></span></h2>
       <p>La física es la ciencia natural que estudia los componentes fundamentales del universo, la
     energía, la materia, el espacio-tiempo y las interacciones fundamentales. Su objetivo principal
     es entender cómo funciona el universo y formular leyes basadas en observaciones experimentales y
     cuantificaciones matemáticas de fenómenos físicos.</p>
-     
+     <p>Ahora descubriras todos los conceptos de la Fisica Clasica de Forma "Descriptiva"<p>
     </div>
     <div class="wave"></div>
   </section>
@@ -4813,5 +4813,6 @@ footer {
             });
     </script>
 </body>
+
 
 </html>
