--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
     <!-- MathJax -->
     <script src="https:cdn.jsdelivr.net/npm/core-js-bundle@3.30.2/minified.js"></script>
     <script id="MathJax-script" async src="https:cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    
+    <!-- MathJax para fórmulas matemáticas -->
+  <script type="text/javascript" id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
+  <script>
+    window.MathJax = {
+      tex: {
+        inlineMath: [['$', '$'], ['\\(', '\\)']],
+        displayMath: [['$$', '$$'], ['\\[', '\\]']]
+      }
+    };
+  </script>
 </head>
 
 <style>
@@ -4816,3 +4827,4 @@ footer {
 
 
 </html>
+
