--- a/index.html
+++ b/index.html
@@ -1004,6 +1004,7 @@ footer {
         </div>
         <ul class="nav-links">
           <li><a href="https://sigma-91.github.io/Mathematik-Bibliothek-MX/">Mathematik Bibliothek MX</a></li>
+          <li><a href="https://sigma-91.github.io/MATH-Science-MX/">MATH Science MX</a></li>
           
         </ul>
         <button class="hamburger" id="mobile-menu-btn">
@@ -4826,5 +4827,6 @@ footer {
             });
     </script>
 </body>
+
 
 </html>
