--- a/index.html
+++ b/index.html
@@ -1318,6 +1318,7 @@ footer {
         </div>
         <ul class="nav-links">
         <li><a href="https://sigma-91.github.io/Mathematik-Bibliothek-MX/">Mathematik Bibliothek MX</a></li>
+        <li><a href="https://sigma-91.github.io/Acerca-De-SigMATH-MX/">Acerca De</a></li>
         
           
         </ul>
@@ -5238,5 +5239,6 @@ footer {
                 });
     </script>
 </body>
+
 
 </html>
