--- a/index.html
+++ b/index.html
@@ -1317,6 +1317,7 @@ footer {
           <h1 class="sigma">Σ</h1><h1 class="sig">Physic</h1><h1 class="MATH">MATH MX</h1>
         </div>
         <ul class="nav-links">
+            <li><a href="https://sigma-91.github.io/SigMATH-MX/">SigMATH MX</a></li>
         <li><a href="https://sigma-91.github.io/Mathematik-Bibliothek-MX/">Mathematik Bibliothek MX</a></li>
         <li><a href="https://sigma-91.github.io/Acerca-De-SigMATH-MX/">Acerca De</a></li>
         
@@ -5242,3 +5243,4 @@ footer {
 
 
 </html>
+
